# web-crawler

./: .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml  query.sql  run_scraper.sh  start_kafka.sh  stop_kafka.sh  test_playwright.py  test_scalene.py
.github/workflows/: main.yml
scraped_data/: amazon_com.html  dell_com.html  google_com.html  metadata.json
src/web_crawler/: database.py  kafka.py  kafka_consumer.py  kafka_producer.py  kafka_utils.py  main.py  scraper.py  utils.py
web_crawler/: main.py
