[tool.poetry]
name = "web-crawler"
version = "0.1.0"
description = "Scalabale web scraping infrastructure"
authors = ["Landon Gingerich <landon.ging@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
openai = "^1.37.1"
python-dotenv = "^1.0.0"
playwright = "^1.45.1"
pytest-playwright = "^0.5.1"
polars = "^1.2.1"
aiofiles = "^24.1.0"
confluent-kafka = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
